--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,11 @@
 
 html,
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 /* 
