--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,9 +28,9 @@ body::before {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: radial-gradient( #d9f3fc, #d1fef4, #f5dbff, #fad3f4);
+    background: linear-gradient(-45deg, #e89c85, #ff77ab, #23a6d5, #23d5ab);
     background-size: 400% 400%;
-    animation: gradient 20s ease infinite;
+    animation: gradient 8s ease infinite;
     z-index: -1;
 }
 
